--- a/composer.json
+++ b/composer.json
@@ -12,5 +12,6 @@
             "homepage": "http://simpleforum.org/n/smd",
             "role": "Developer"
         }
-    ]
+    ],
+    "minimum-stability": "stable"
 }
